# pytorch_lighting_template

./: .gitignore  .lightningignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
docs/: README.md
lightning_pod/: conf.py
lightning_pod/cli/: console.py
lightning_pod/core/: module.py  trainer.py
lightning_pod/fabric/bugreport/: bugreport.py  trainer.py
lightning_pod/pipeline/: datamodule.py  dataset.py
logs/optuna/: README.md
logs/tensorboard/: README.md
logs/wandb_logs/: README.md
models/checkpoints/: README.md
models/onnx/: README.md
notebooks/: exploratory-data-analysis.ipynb
requirements/: base.txt  dev.txt  docs.txt  experiment_managers.txt  forecast.txt  frontends.txt  packaging.txt
tests/: test_datamodule.py  test_network_module.py
