[build-system]
requires = [
    "setuptools",
    "wheel",
]

[tool.black]
line-length = 120

[tool.isort]
known_first_party = [
    "lightning_pod",
]
profile = "black"
line_length = 120
force_sort_within_sections = "False"
order_by_type = "False"

[tool.mypy]
files = ["lightning_pod"]
install_types = true
non_interactive = true
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
allow_redefinition = true
# disable this rule as the Trainer attributes are defined in the connectors, not in its __init__
disable_error_code = "attr-defined"
# style choices
warn_no_return = "False"

# do not add type hints to lightnig_pod/cli/seed/ or core.module
# because lightning already defines types
[[tool.mypy.overrides]]
module = [
    "lightning_pod.core.module",
]
ignore_errors = true
